Site-Header Remove extra vertical space and adjust margins.   Moves header .logo styles out of _menu--header.scss and into _region--header.scss       ---> This seems to fix the top-invisibile-couldn't find margin       that was showing on non-homepages.  Perhaps somehow a conflicting       style existed   Refactors components positioning by converting from flexbox to susy-grids.   Adjusts Markup and Styles to better pair HTML ELEMENT Tag Names and CSS Selectors   with components.   Deletes empty selectors and previously commented styles.
Menu-Mobile
  Fixes mobile-menu-close-button 'X' so z-index shows it again.

Product-Page
  Added padding-top 2rem and adjusted margin for image at same $size-sm breakpoint

Snipcart-Modal
  Product Image: Increased size from mobile+ so wouldn't be tiny
  Product Title: Increased line-height b/c was too scrunched
  Misc refactoring and deleting of old no-long-needed v2 snipcart style

--- a/user/themes/bodigiti/style/scss/base/_base--normalize-bodigiti.scss
+++ b/user/themes/bodigiti/style/scss/base/_base--normalize-bodigiti.scss
@@ -16,7 +16,3 @@ html {
   box-sizing: inherit;
 }
 
-section.header-inner {
-  border-bottom: 1px solid $gray5;
-
-}
